--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
  <h1>Desliza a la izquierda</h1>
   </div>
   <div data-role="content" align="center">
-  <div id="derecha" style="width:90%; height:300px; background-color:#09f;">
+  <div id="izquierda" style="width:90%; height:300px; background-color:#09f;">
   </div>
   </div>
  <div data-role="footer" align="center" data-theme="a" data-position="fixed">
